// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render Checkbox 1`] = `
<div
  className="sc-AxirZ jYsigk"
>
  <input
    checked={false}
    className="sc-AxiKw iRBKSw"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="sc-AxhCb cKTODx"
  />
  <span
    className="sc-AxgMl ksYAfx"
  >
    
  </span>
</div>
`;

exports[`Checkbox should render Checkbox with checked prop 1`] = `
<div
  className="sc-AxirZ jYsigk"
>
  <input
    checked={true}
    className="sc-AxiKw iRBKSw"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={true}
    className="sc-AxhCb eZOafX"
  >
    <span
      className="sc-AxhUy fUSTcQ sc-AxjAm jnaJRY lni lni-checkmark"
    />
  </div>
  <span
    className="sc-AxgMl ksYAfx"
  >
    
  </span>
</div>
`;
